--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaming Website</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header>
+        <div class="head-left">
+          <img src="img/logo.png" alt="logo" />
+          <button>Products</button>
+        </div>
+
+        <div class="head-right">
+          <p><a href="#">NEXUS</a></p>
+          <p><a href="#">VAULT</a></p>
+          <p><a href="#">ABOUT</a></p>
+          <p><a href="#">SERVICE</a></p>
+          <p><a href="#">CONTANT</a></p>
+        </div>
+      </header>
+
+      <section class="hero-section">
+        <div class="hero-vid">
+          <video loop autoplay muted plays-inline class="hero-video">
+            <source src="videos/hero-1.mp4" type="video/mp4" />
+          </video>
+        </div>
+      </section>
+    </div>
+    <script src="/app.js"></script>
+  </body>
 </html>
