--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
           <video loop autoplay muted plays-inline class="hero-video">
             <source src="videos/hero-1.mp4" type="video/mp4" />
           </video>
+
+          <div class="hero-info">
+            <h1>REDEFINE</h1>
+            <p>Enter the metagame Layer Unleash the Play Economy</p>
+            <button>Watch Trailer</button>
+          </div>
+
+          <h1 class="gaming-text">Gaming</h1>
+          <button class="next-btn">Next</button>
         </div>
       </section>
     </div>
