--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
           <button class="next-btn">Next</button>
         </div>
       </section>
+
+      <section class="about-section">
+        <p>Welcome to Zentry</p>
+        <h1>DISCOVER THE WORLD'S LARGEST SHARED ADVENTURE</h1>
+
+        <div class="image-box">
+          <img src="img/about.webp" alt="about-image" />
+        </div>
+        <h4>Game of Game begins-your life, now an epic MMORPG</h4>
+        <h5>
+          Zentry unites every player from countless game and platforms, both
+          digital and physical, into a unified Play Economy
+        </h5>
+      </section>
     </div>
     <script src="/app.js"></script>
   </body>
