--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
           </div>
         </div>
       </section>
+
+      <section class="contact-section">
+        <p>Join Zentry</p>
+        <h1>LET'S BUILD THE ERA OF GAMING TOGETHER</h1>
+        <button>CONTACT US</button>
+        <img class="img1" src="img/swordman.webp" alt="contact-img" />
+        <img class="img2" src="img/contact-1.webp" alt="contact-img" />
+        <img class="img3" src="img/contact-2.webp" alt="contact-img" />
+      </section>
     </div>
     <script src="/app.js"></script>
   </body>
