--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaming Website</title>
     <link rel="stylesheet" href="/style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -148,6 +151,25 @@
         <img class="img1" src="img/swordman.webp" alt="contact-img" />
         <img class="img2" src="img/contact-1.webp" alt="contact-img" />
         <img class="img3" src="img/contact-2.webp" alt="contact-img" />
+      </section>
+
+      <section class="footer">
+        <p>©Nova 2025, All right reserved</p>
+        <ul>
+          <li>
+            <a href="#"><i class="bx bxl-youtube"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bxl-github"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
+          </li>
+        </ul>
+        <p>Privacy Policy</p>
       </section>
     </div>
     <script src="/app.js"></script>
