--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1>DISCOVER THE WORLD'S LARGEST SHARED ADVENTURE</h1>
         </div>
 
-        <div class="image-box">
+        <div class="image-box autoTakeFull">
           <img src="img/about.webp" alt="about-image" />
         </div>
         <h4>Game of Game begins-your life, now an epic MMORPG</h4>
