--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </p>
 
         <div class="info-cards">
-          <div class="card">
+          <div class="card autoDisplay">
             <h1>RADIANT</h1>
             <p>
               An anime and gaming-inspired NFT collection - the IP primed fo
@@ -83,7 +83,7 @@
             <button>COMING SOON</button>
           </div>
 
-          <div class="card">
+          <div class="card autoDisplay">
             <h1>ZIGMA</h1>
             <p>
               A cross-platform metagame app,turning your activities across Web2
@@ -99,7 +99,7 @@
             <button>COMING SOON</button>
           </div>
 
-          <div class="card">
+          <div class="card autoDisplay">
             <h1>NEXUS</h1>
             <p>
               A gamefied social hub, adding a new dimension of play to social
@@ -115,7 +115,7 @@
             <button>COMING SOON</button>
           </div>
 
-          <div class="card">
+          <div class="card autoDisplay">
             <h1>AZUL</h1>
             <p>
               A cross-world AI Agent - elevating your gameplay to be more fun
@@ -131,7 +131,7 @@
             <button>COMING SOON</button>
           </div>
 
-          <div class="card">
+          <div class="card autoDisplay">
             <video
               src="videos/feature-5.mp4"
               autoplay
@@ -140,7 +140,7 @@
               plays-inline></video>
           </div>
 
-          <div class="card">
+          <div class="card autoDisplay">
             <h1>MORE COMING SOON</h1>
           </div>
         </div>
