live link added

--- a/index.html
+++ b/index.html
@@ -161,19 +161,31 @@
         <p>©Nova 2025, All right reserved</p>
         <ul>
           <li>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
+            <a href="https://www.facebook.com/atikmahmud.atikmahmud.564/"
+              ><i class="bx bxl-facebook-circle"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="bx bxl-twitter"></i></a>
+            <a href="https://x.com/MahmudAl34421"
+              ><i class="bx bxl-twitter"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="bx bxl-github"></i></a>
+            <a
+              href="https://github.com/atikmahmud482?tab=overview&from=2025-01-01&to=2025-01-23"
+              ><i class="bx bxl-github"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/atik-al-mahmud-8b6628340/"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
           </li>
         </ul>
-        <p>Privacy Policy</p>
+        <p>
+          Made By
+          <a href="https://www.facebook.com/atikmahmud.atikmahmud.564/">Atik</a>
+        </p>
       </section>
     </div>
     <script src="/app.js"></script>
